--- a/Daily-Info/Daily-Info/Views/Base.lproj/Main.storyboard
+++ b/Daily-Info/Daily-Info/Views/Base.lproj/Main.storyboard
@@ -364,13 +364,13 @@
         <!--Weather Settings-->
         <scene sceneID="lKs-RR-7pw">
             <objects>
-                <viewController id="ZM3-63-aif" sceneMemberID="viewController">
+                <viewController id="ZM3-63-aif" customClass="WeatherSettingsViewController" customModule="Daily_Info" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WyR-d9-Kui">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="zLF-Mm-Sak">
-                                <rect key="frame" x="122.5" y="350" width="169" height="196"/>
+                                <rect key="frame" x="122.5" y="128" width="169" height="196"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Units" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aSn-99-FKg">
                                         <rect key="frame" x="0.0" y="0.0" width="169" height="20.5"/>
@@ -384,6 +384,9 @@
                                             <segment title="Celsius"/>
                                             <segment title="Fahrenheit"/>
                                         </segments>
+                                        <connections>
+                                            <action selector="unitsValueChanged:" destination="ZM3-63-aif" eventType="valueChanged" id="lBl-tc-eFn"/>
+                                        </connections>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Postal Code" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ss0-uM-UcR">
                                         <rect key="frame" x="0.0" y="111.5" width="169" height="20.5"/>
@@ -394,7 +397,11 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f6o-Md-iG6">
                                         <rect key="frame" x="0.0" y="162" width="169" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" textContentType="postal-code"/>
+                                        <connections>
+                                            <action selector="editingChanged:" destination="ZM3-63-aif" eventType="editingChanged" id="FF8-cy-l48"/>
+                                            <action selector="onResign:" destination="ZM3-63-aif" eventType="primaryActionTriggered" id="zJu-xz-HlJ"/>
+                                        </connections>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -404,14 +411,31 @@
                         <constraints>
                             <constraint firstItem="zLF-Mm-Sak" firstAttribute="centerX" secondItem="WyR-d9-Kui" secondAttribute="centerX" id="7uf-yO-ciK"/>
                             <constraint firstItem="e0k-rZ-WD9" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="zLF-Mm-Sak" secondAttribute="trailing" constant="40" id="KUn-45-8gw"/>
+                            <constraint firstItem="zLF-Mm-Sak" firstAttribute="top" secondItem="e0k-rZ-WD9" secondAttribute="top" constant="40" id="Wix-xx-mva"/>
                             <constraint firstItem="zLF-Mm-Sak" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="e0k-rZ-WD9" secondAttribute="leading" constant="40" id="a0k-67-Cfb"/>
-                            <constraint firstItem="zLF-Mm-Sak" firstAttribute="centerY" secondItem="WyR-d9-Kui" secondAttribute="centerY" id="bkR-y2-Ovq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="e0k-rZ-WD9"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Weather Settings" largeTitleDisplayMode="never" id="zTp-Gz-cSD"/>
+                    <navigationItem key="navigationItem" title="Weather Settings" largeTitleDisplayMode="never" id="zTp-Gz-cSD">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="fHy-9g-CH3">
+                            <connections>
+                                <segue destination="uNv-fQ-JFW" kind="unwind" unwindAction="unwindWeatherWithSegue:" id="zIy-La-C1n"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="Lrk-EH-sSB">
+                            <connections>
+                                <segue destination="uNv-fQ-JFW" kind="unwind" identifier="saveUnwind" unwindAction="unwindWeatherWithSegue:" id="fto-In-pJL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="control" destination="wD9-dL-Y1U" id="p61-fq-LWd"/>
+                        <outlet property="saveButton" destination="Lrk-EH-sSB" id="KJW-Rt-AO5"/>
+                        <outlet property="textField" destination="f6o-Md-iG6" id="6Ji-G3-pZ8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MLg-df-r5h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="uNv-fQ-JFW" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2592.753623188406" y="189.50892857142856"/>
         </scene>
@@ -442,6 +466,6 @@
         <image name="list.bullet" catalog="system" width="64" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="lfe-XP-1ir"/>
+        <segue reference="1b6-2c-b3w"/>
     </inferredMetricsTieBreakers>
 </document>
