--- a/Daily-Info/Daily-Info/Views/Base.lproj/Main.storyboard
+++ b/Daily-Info/Daily-Info/Views/Base.lproj/Main.storyboard
@@ -374,6 +374,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="0bt-47-TUn" kind="presentation" identifier="EditNote" id="E4P-fo-a4a"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -391,7 +394,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KtI-5i-bjt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="714" y="903"/>
+            <point key="canvasLocation" x="713.04347826086962" y="902.67857142857133"/>
         </scene>
         <!--Notes-->
         <scene sceneID="DmB-24-Usg">
@@ -507,35 +510,6 @@
             </objects>
             <point key="canvasLocation" x="2592.753623188406" y="189.50892857142856"/>
         </scene>
-        <!--Add new Note-->
-        <scene sceneID="9to-Fm-UUA">
-            <objects>
-                <tableViewController id="df4-1i-ml0" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XyX-VB-bdD">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="fJv-rr-H0S">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fJv-rr-H0S" id="34U-jN-SVL">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="df4-1i-ml0" id="Mv6-rM-fie"/>
-                            <outlet property="delegate" destination="df4-1i-ml0" id="JhD-VK-9KQ"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Add new Note" largeTitleDisplayMode="never" id="U05-qd-ZrX"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7JD-9Q-eRJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2593" y="903"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="ICC-eD-lkU">
             <objects>
@@ -545,7 +519,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="df4-1i-ml0" kind="relationship" relationship="rootViewController" id="vWs-rc-Oa4"/>
+                        <segue destination="phB-L8-cXm" kind="relationship" relationship="rootViewController" id="5Nl-gx-oCU"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yTz-ij-C90" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -570,6 +544,81 @@
             </objects>
             <point key="canvasLocation" x="1682.608695652174" y="189.50892857142856"/>
         </scene>
+        <!--Add Note View Controller-->
+        <scene sceneID="lHo-CH-ceV">
+            <objects>
+                <viewController id="phB-L8-cXm" customClass="AddNoteViewController" customModule="Daily_Info" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L98-Re-Lci">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sud-ck-N3N">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="SmF-PK-rdu">
+                                        <rect key="frame" x="30" y="30" width="354" height="714"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OaH-lO-9bl">
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="92.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <action selector="returnPressed:" destination="phB-L8-cXm" eventType="primaryActionTriggered" id="5AS-f8-WYZ"/>
+                                                    <action selector="titleChanged:" destination="phB-L8-cXm" eventType="editingChanged" id="nc7-5q-eAO"/>
+                                                </connections>
+                                            </textField>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="st1-EX-dhd">
+                                                <rect key="frame" x="0.0" y="102.5" width="354" height="611.5"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="bbe-xl-M3A" firstAttribute="bottom" secondItem="SmF-PK-rdu" secondAttribute="bottom" constant="30" id="FZG-nX-oEm"/>
+                                    <constraint firstItem="bbe-xl-M3A" firstAttribute="trailing" secondItem="SmF-PK-rdu" secondAttribute="trailing" constant="30" id="Hvu-bs-rim"/>
+                                    <constraint firstItem="SmF-PK-rdu" firstAttribute="leading" secondItem="bbe-xl-M3A" secondAttribute="leading" constant="30" id="T7b-WO-VWB"/>
+                                    <constraint firstItem="SmF-PK-rdu" firstAttribute="top" secondItem="bbe-xl-M3A" secondAttribute="top" constant="30" id="p62-1E-eDA"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="gmC-HV-FlW"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="bbe-xl-M3A"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="sud-ck-N3N" firstAttribute="bottom" secondItem="mHB-2k-ngV" secondAttribute="bottom" id="FbK-q5-AcV"/>
+                            <constraint firstItem="sud-ck-N3N" firstAttribute="top" secondItem="mHB-2k-ngV" secondAttribute="top" id="UmP-gg-iUg"/>
+                            <constraint firstItem="sud-ck-N3N" firstAttribute="leading" secondItem="mHB-2k-ngV" secondAttribute="leading" id="p5h-bY-nTB"/>
+                            <constraint firstItem="sud-ck-N3N" firstAttribute="trailing" secondItem="mHB-2k-ngV" secondAttribute="trailing" id="xyg-Rg-VMD"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="mHB-2k-ngV"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ZQO-YQ-coG">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="t8B-9i-P0N">
+                            <connections>
+                                <segue destination="UBy-re-wKI" kind="unwind" unwindAction="unwindNoteListWithSegue:" id="iVV-qv-g8D"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="bjX-ZU-5wl">
+                            <connections>
+                                <segue destination="UBy-re-wKI" kind="unwind" identifier="saveUnwind" unwindAction="unwindNoteListWithSegue:" id="sFY-QK-Z8C"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="contentText" destination="st1-EX-dhd" id="njL-9J-ppQ"/>
+                        <outlet property="saveButton" destination="bjX-ZU-5wl" id="Hq8-FX-9HN"/>
+                        <outlet property="titleText" destination="OaH-lO-9bl" id="x1Y-rN-erL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WLW-2n-ggz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="UBy-re-wKI" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2466.666666666667" y="902.67857142857133"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Cloudy" width="250" height="250"/>
@@ -580,7 +629,8 @@
         <image name="square.and.pencil" catalog="system" width="64" height="58"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1b6-2c-b3w"/>
+        <segue reference="E4P-fo-a4a"/>
+        <segue reference="lfe-XP-1ir"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
